Fix alignment of login/signup buttons in distraction free mode

--- a/ces/src/css/content/modules/_distractionFreeMode.scss
+++ b/ces/src/css/content/modules/_distractionFreeMode.scss
@@ -5,6 +5,15 @@ body.distraction-free-mode {
   .site-footer {
     height: $footer-size;
   }
+  
+  #main-header {
+    min-width: 700px;
+  }
+
+  .signup-and-login {
+    padding-top: 0;
+    margin: auto 0;
+  }
 
   &.layout-top {
 
